php-src/ext/phar/tests/bug71331.exp
Fatal error: Uncaught UnexpectedValueException: phar error: "%s%ebug71331.tar" is a corrupted tar file (invalid entry size) in %s%ebug71331.php:2
Stack trace:
#0 %s%ebug71331.php(2): PharData->__construct('%s')
#1 {main}
  thrown in %s%ebug71331.php on line 2