php-src/ext/phar/tests/bug71331.php
<?php
$p = new PharData(__DIR__."/bug71331.tar");
?>
DONE
